// Copyright The HTNN Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package types.plugins.oidc;

import "google/protobuf/duration.proto";
import "validate/validate.proto";

option go_package = "mosn.io/htnn/types/plugins/oidc";

enum UserinfoFormatEnums {
  BASE64URL = 0;
  BASE64 = 1;
  RAW_JSON = 2;
}

message Config {
  string client_id = 1 [(validate.rules).string = {min_len: 1}];
  string client_secret = 2 [(validate.rules).string = {min_len: 1}];
  // The issuer is the URL identifier for the service. For example: "https://accounts.google.com"
  // or "https://login.salesforce.com".
  string issuer = 3 [(validate.rules).string = {uri: true}];
  // The configured URL MUST exactly match one of the Redirection URI values
  // for the Client pre-registered at the OpenID Provider
  string redirect_url = 4 [(validate.rules).string = {uri: true}];
  repeated string scopes = 5;

  // [#do_not_document]
  // This option is provided to skip the nonce verification. It is designed for local development.
  bool skip_nonce_verify = 6;

  // Default to "x-id-token"
  string id_token_header = 7;

  // The timeout to wait for the OIDC provider to respond. Default to 3s.
  google.protobuf.Duration timeout = 8 [(validate.rules).duration = {
    gt: {},
  }];

  bool disable_access_token_refresh = 9;
  // The duration to determines how earlier a token should be considered
  // expired than its actual expiration time. It is used to avoid late
  // expirations due to client-server time mismatches. Default to 10s.
  google.protobuf.Duration access_token_refresh_leeway = 10 [(validate.rules).duration = {
    gte: {},
  }];

  // Controls whether to enable userinfo support. When enabled, the plugin will be able to fetch
  // The full object will inserted into a single HTTP header (default: x-userinfo).
  // additional user information from the OIDC provider. Defaults to false.
  bool enable_userinfo_support = 11;

  // Default to "x-userinfo"
  string userinfo_header = 12;

  UserinfoFormatEnums userinfo_format = 13;

  // AES-256 encryption key for securing cookies (must be 16, 24, or 32 bytes).
  // should use a different key than client_secret.
  string cookie_encryption_key = 14
      [(validate.rules).string = {pattern: "^.{16}$|^.{24}$|^.{32}$", ignore_empty: true}];
}
